--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Studies on Human Behaviour 2020/2021</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -63,10 +63,7 @@
                         <a href="#syllabus">Syllabus</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#material">Material</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#calendar">Calendar</a>
+                        <a href="#calendar">Calendar and Material</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#exam">Exam</a>
@@ -100,32 +97,7 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section id="instructions">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Instructions</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>
-                    The Fall 2020 Edition of Computational Logic is delivered using the
-                    Flipped Classroom methodology<sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup>, which requires a bit more work on
-                    your side during the course (and also on our side), but should yield
-                    considerably better results.
-                    </p>
-                    <p>
-                    In synthesis…
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Portfolio Grid Section -->
-    <section class="success" id="news">
+    <section id="news">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -181,6 +153,287 @@
         </div>
     </section>
 
+    <!-- Portfolio Grid Section -->
+    <section class="success" id="instructions">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Instructions</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>
+                    The Fall 2020 Edition of Computational Logic is delivered using the
+                    Flipped Classroom methodology<sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup>, which requires a bit more work on
+                    your side during the course (and also on our side), but should yield
+                    considerably better results.
+                    </p>
+                    <p>
+                    In synthesis…
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Portfolio Grid Section -->
+    <section id="calendar">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Calendar and Material</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>The course runs from Sep, 21, 2020 till Dec 11, 2020 with the following schedule:</p>
+                    <ul>
+                    <li><p>Mondays, 11:30-13:30</p></li>
+                    <li><p>Thursday, 11:30-13:30</p></li>
+                    </ul>
+                    <p>&nbsp;</p>
+                    <p>
+                    Always check the official University calendar on Moodle.
+                    </p>
+                    <p>&nbsp;</p>
+                    <p>The Zoom link for the video conference available on the Moodle platform at the University of Trento.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12"  style="background-color: lightpink; border-left: 6px solid red">
+                    <p>&nbsp;</p>
+                    <p>
+                    Interactive sessions are recorded and made available on the Internet
+                    for reference and support to other students.  If you do not wish to be
+                    recorded, you can organize a meeting with one of the professors.
+                    </p>
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="page-scroll">
+                    You might want to read the <a href="#instructions">Instructions</a> to understand how to take the course.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>
+                    Notice also the titles and structure of the lessons yet to be delivered might change slightly . The rule of the thumb is: if there are links with materials, things won’t change; if there are no links to the materials, titles and content are just suggestions.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <table class="table table-striped table-bordered table-hover">
+                      <thead>
+                        <tr>
+                          <th scope="col">Date&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                          <th scope="col">Starts at</th>
+                          <th scope="col">Material&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                          <th scope="col">Content of Lesson</th>
+                          <th scope="col">Professor(s)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">21 Sep, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Course Introduction. Planning a project.</td>
+                          <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">24 Sep, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Theory driven vs. Data driven vs. Knowledge Driven </td>
+                          <td>I. Bison, F. Giunchiglia</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">28 Sep, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Why Human Behaviour? Why diversity? From a computer science perspective.</td>
+                          <td>F. Giunchiglia</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">1 Oct, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Why Human Behaviour? Why diversity? From a sociological perspective.</td>
+                          <td>I. Bison</td>
+                        </tr>
+                        <tr style="background-color: lightpink">
+                          <th scope="row">5 Oct, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Groups project discussion.</td>
+                          <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
+                        </tr>
+                        <tr style="background-color: lightpink">
+                          <th scope="row">8 Oct, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Groups project discussion.</td>
+                          <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">12 Oct, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Active data: Questionnaire for synchronic and diachronic data & Type of social data.</td>
+                          <td>I. Bison</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">15 Oct, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Passive data: Sensors or other devices.</td>
+                          <td>M. Zeni</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">19 Oct, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Capture synchronic / diachronic self-report data (Lime survey).</td>
+                          <td>M. Busso</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">22 Oct, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Capture in-the-time data (diachronic and streaming data)</td>
+                          <td>M. Zeni</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">26 Oct, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Sample design, sampling, and Field Experiment.</td>
+                          <td>I. Bison</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">29 Oct, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Sample design, sampling, and Field Experiment; The timing (frequencies) of data collection.</td>
+                          <td>?</td>
+                        </tr>
+                        <tr style="background-color: lightpink">
+                          <th scope="row">2 Nov, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Groups presentations</td>
+                          <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
+                        </tr>
+                        <tr style="background-color: lightpink">
+                          <th scope="row">5 Nov, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Groups presentations</td>
+                          <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">9 Nov, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>The recruitment; Field supervising; Ethical & GDPR aspects.</td>
+                          <td>R. Bona</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">12 Nov, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Big Data storage solutions</td>
+                          <td>M. Zeni</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">15 Nov, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Data Cleaning & Methods for Data preparation.</td>
+                          <td>I. Bison, M. Busso</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">19 Nov, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Data Cleaning & Methods for Data preparation.</td>
+                          <td>M. Zeni</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">23 Nov, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Synchronic and Diachronic statistical models.</td>
+                          <td>I. Bison</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">26 Nov, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Analyse sensor data.</td>
+                          <td>M. Zeni</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">30 Nov, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Find regularity, patterns, ...</td>
+                          <td>I. Bison</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3 Dec, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Network models.</td>
+                          <td>I. Bison</td>
+                        </tr>
+                        <tr style="background-color: lightpink">
+                          <th scope="row">7 Dec, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Final groups presentations</td>
+                          <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
+                        </tr>
+                        <tr style="background-color: lightpink">
+                          <th scope="row">10 Dec, 2020</th>
+                          <td>11:30</td>
+                          <td>Slides, Video</td>
+                          <td>Final groups presentations</td>
+                          <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
