Calendar and material updated

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>
-                    The Fall 2020 Edition of Computational Logic is delivered using the
+                    The Fall 2020 Edition of Studies on Human Behaviour is delivered using the
                     Flipped Classroom methodology<sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup>, which requires a bit more work on
                     your side during the course (and also on our side), but should yield
                     considerably better results.
