Update calendar, holidays

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>The course runs from Sep, 21, 2020 till Dec 11, 2020 with the following schedule:</p>
+                    <p>The course runs from September, 21, 2020 till December 14, 2020 with the following schedule:</p>
                     <ul>
                     <li><p>Mondays, 11:30-13:30</p></li>
                     <li><p>Thursday, 11:30-13:30</p></li>
@@ -414,15 +414,22 @@
                           <td>Network models.</td>
                           <td>I. Bison</td>
                         </tr>
-                        <tr style="background-color: lightpink">
+                        <tr style="background-color: lightblue">
                           <th scope="row">7 Dec, 2020</th>
+                          <td> - </td>
+                          <td> - </td>
+                          <td>No lecture, holiday</td>
+                          <td> - </td>
+                        </tr>
+                        <tr style="background-color: lightpink">
+                          <th scope="row">10 Dec, 2020</th>
                           <td>11:30</td>
                           <td>Slides, Video</td>
                           <td>Final groups presentations</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
                         </tr>
                         <tr style="background-color: lightpink">
-                          <th scope="row">10 Dec, 2020</th>
+                          <th scope="row">14 Dec, 2020</th>
                           <td>11:30</td>
                           <td>Slides, Video</td>
                           <td>Final groups presentations</td>
