--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>The course runs from September, 21, 2020 till December 14, 2020 with the following schedule:</p>
+                    <p>The course runs from September 21, 2020 till December 14, 2020 with the following schedule:</p>
                     <ul>
                     <li><p>Mondays, 11:30-13:30</p></li>
                     <li><p>Thursday, 11:30-13:30</p></li>
