--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
-                          <td>The data from the i-Log data collectione experiment is made available to the users.</td>
+                          <td>Data from the i-Log data collection experiment is made available to the students.</td>
                           <td> - </td>
                         </tr>
                         <tr>
