Typo, added material, added lessons ids

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
-                          <td>Analyse sensor data.</td>
+                          <td>Sensor data analysis.</td>
                           <td>M. Zeni</td>
                         </tr>
                         <tr>
