--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
-                          <td>Passive data: Sensors or other devices.</td>
+                          <td>Methods and tools for data collection. Passive data: smartphones or other devices.</td>
                           <td>M. Zeni</td>
                         </tr>
                         <tr>
@@ -363,7 +363,7 @@
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
-                          <td>Capture in-the-time data (diachronic and streaming data)</td>
+                          <td>Instruments for data collection. Capture in-the-time data (diachronic and streaming data).</td>
                           <td>M. Zeni</td>
                         </tr>
                         <tr style="background-color: lightblue">
@@ -426,7 +426,7 @@
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
-                          <td>Big Data storage solutions</td>
+                          <td>Data platforms for big data.</td>
                           <td>M. Zeni</td>
                         </tr>
                         <tr>
@@ -435,7 +435,7 @@
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
-                          <td>Data Cleaning & Methods for Data preparation.</td>
+                          <td>Data Cleaning and Methods for Data preparation.</td>
                           <td>I. Bison, M. Busso</td>
                         </tr>
                         <tr style="background-color: lightblue">
@@ -453,7 +453,7 @@
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
                           <td>Slides, Video</td>
-                          <td>Data Cleaning & Methods for Data preparation.</td>
+                          <td>Data cleaning and methods for data preparation.</td>
                           <td>M. Zeni</td>
                         </tr>
                         <tr>
