--- a/index.html
+++ b/index.html
@@ -688,6 +688,8 @@
                     <p>Multiple positions are available as 150h and internships. They should be considered as the first part of a research project and thesis with the Knowdive group. The general activities of the group are listed on the website (<b><a style="color:white" href="http://knowdive.disi.unitn.it/">http://knowdive.disi.unitn.it/</a></b>), while activities already scheduled and available now can be found at <b><a style="color:white" href="http://knowdive.disi.unitn.it/work-with-us/">http://knowdive.disi.unitn.it/work-with-us/</a></b>. The 150h activities have variable length and are strictly related to software development: for this reason, knowledge of software development with at least onr programming language is a must. All the activities can also be carried on in a remote fashion.</p>
                     <p>&nbsp;</p>
                     <p>Anyone interested in these opportunities can send an email to <b><a style="color:white" href="mailto:knowdive-positions@disi.unitn.it">knowdive-positions@disi.unitn.it</a></b>, providing already information about preferences in terms of topics or activities (if known). For 150h activities it is important to provide information about known programming languages with the corresponding level, a value in the range [1 - 5] where 1= basic knowledge, 5= advanced knowledge.</p>
+                    <p>The applications to the “150 ore” program can be done at the link: <b><a style="color:white" href="https://www.unitn.it/servizi/224/collaborazioni-studenti-150-ore">https://www.unitn.it/servizi/224/collaborazioni-studenti-150-ore</a></b>
+                    Notice that  the deadline for applications for the A.Y 2020-2021 is September 30, 2020</p>
                 </div>
             </div>
         </div>
