Data collection text added to instructions

--- a/index.html
+++ b/index.html
@@ -172,6 +172,16 @@
                     <p>&nbsp;</p>
                     <p>The idea behind this course is that the students do most of the work during the course duration (up to December) because we believe this should yield considerably better results.</p>
                 </div>
+				<div class="col-lg-12">
+                    <p>&nbsp;</p>
+                </div>
+                <div class="col-lg-12"  style="background-color: #6796bf; border-left: 6px solid #303d4e">
+                    <p>&nbsp;</p>
+                    <p>
+                    Studying human behaviour involves the analysis of real data from people. Data collection is then a crucial part of the whole process. For this reason, the students of the course will be teached and asked to collect data from their own smartphones via an application developed by the Knowdive group, ideally over a period of 2 weeks. Such data is the one that the students will analyse to generate insights for the final examination. In the calendar you can find the dates of the data collection and when the data will be made avilable (dates can still change). More details will be provided by the professors during the first lessons.
+                    </p>
+                    <p>&nbsp;</p>
+                </div>
             </div>
         </div>
     </section>
