--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p>Website online!</p>
                 </div>
                 <div class="col-lg-4">
-                    <p style="font-size:110%;">September 15th, 2020 07:52</p>
+                    <p style="font-size:110%;">September 18th, 2020 12:41</p>
                 </div>
             </div>
             <div class="row">
@@ -282,7 +282,7 @@
                           <td>L1</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
-                          <td>Slides, Video</td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/12f_QQuel7Y2eAJTVLPHIjimyLIrekbaS/view?usp=sharing">Slides</a>, Video</td>
                           <td>Course Introduction. Planning a project.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
                         </tr>
