Added column to calendar with Zoom links

--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
                           <th scope="col">Id</th>
                           <th scope="col">Modality</th>
                           <th scope="col">Starts at</th>
+                          <th scope="col">Zoom</th>
                           <th scope="col">Material</th>
                           <th scope="col">Content of Lesson</th>
                           <th scope="col">Professor(s)</th>
@@ -282,6 +283,7 @@
                           <td>L1</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
+                          <td>Link</td>
                           <td><a target="_blank" href="https://drive.google.com/file/d/12f_QQuel7Y2eAJTVLPHIjimyLIrekbaS/view?usp=sharing">Slides</a>, Video</td>
                           <td>Course Introduction. Planning a project.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
@@ -291,6 +293,7 @@
                           <td>L2</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
+                          <td>Link</td>
                           <td>Slides, Video</td>
                           <td>Theory driven vs. Data driven vs. Knowledge Driven </td>
                           <td>I. Bison, F. Giunchiglia</td>
@@ -299,14 +302,16 @@
                           <th scope="row" rowspan="2">28 Sep, 2020</th>
                           <td rowspan="2">L3</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>     
-                          <td>11:30</td>                  
+                          <td>11:30</td>  
+                          <td> - </td>                
                           <td>Slides, Video</td>
                           <td>Why Human Behaviour? Why diversity? From a computer science perspective.</td>
                           <td>F. Giunchiglia</td>
                         </tr>
                         <tr>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>                         
-                          <td>12:30</td>                   
+                          <td>12:30</td>   
+                          <td>Link</td>                
                           <td>Slides, Video</td>
                           <td>Group formation, instructions and How to do a literature review.</td>
                           <td>M. Busso</td>
@@ -315,14 +320,16 @@
                           <th scope="row" rowspan="2">1 Oct, 2020</th>
                           <td rowspan="2">L4</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>     
-                          <td>11:30</td>                  
+                          <td>11:30</td> 
+                          <td>Link</td>                 
                           <td>Slides, Video</td>
                           <td>Why Human Behaviour? Why diversity? From a sociological perspective.</td>
                           <td>I. Bison</td>
                         </tr>
                         <tr>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>                         
-                          <td>12:30</td>                   
+                          <td>12:30</td>  
+                          <td>Link</td>                 
                           <td>Slides, Video</td>
                           <td>How to write a research project 1st Part.</td>
                           <td>M. Busso</td>
@@ -331,14 +338,16 @@
                           <th scope="row" rowspan="2">5 Oct, 2020</th>
                           <td rowspan="2">L5</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>     
-                          <td>11:30</td>                  
+                          <td>11:30</td> 
+                          <td>Link</td>                 
                           <td>Slides, Video</td>
                           <td>Active data: Questionnaire for synchronic and diachronic data & Type of social data.</td>
                           <td>I. Bison</td>
                         </tr>
                         <tr>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>                         
-                          <td>12:30</td>                   
+                          <td>12:30</td> 
+                          <td>Link</td>                  
                           <td>Slides, Video</td>
                           <td>How to prepare a questionnaire and how to write a research project 2nd Part.</td>
                           <td>M. Busso</td>
@@ -348,12 +357,14 @@
                           <td>L6</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
+                          <td> - </td>
                           <td>Slides, Video</td>
                           <td>Methods and tools for data collection. Passive data: smartphones or other devices.</td>
                           <td>M. Zeni</td>
                         </tr>
                         <tr style="background-color: lightblue">
                           <th scope="row">12 Oct, 2020</th>
+                          <td> - </td>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
@@ -366,6 +377,7 @@
                           <td>L7</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
+                          <td>Link</td>
                           <td>Slides, Video</td>
                           <td>Groups: project plan discussion.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
@@ -375,6 +387,7 @@
                           <td>L8</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
+                          <td>Link</td>
                           <td>Slides, Video</td>
                           <td>Groups: project plan discussion.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
@@ -384,6 +397,7 @@
                           <td>L9</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
+                          <td> - </td>
                           <td>Slides, Video</td>
                           <td>Capture synchronic / diachronic self-report data (Lime survey).</td>
                           <td>M. Busso</td>
@@ -393,12 +407,14 @@
                           <td>L10</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
+                          <td> - </td>
                           <td>Slides, Video</td>
                           <td>Instruments for data collection. Capture in-the-time data (diachronic and streaming data).</td>
                           <td>M. Zeni</td>
                         </tr>
                         <tr style="background-color: lightblue">
                           <th scope="row">25 Oct, 2020</th>
+                          <td> - </td>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
@@ -411,6 +427,7 @@
                           <td>L11</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
+                          <td> ? </td>
                           <td>Slides, Video</td>
                           <td>Sample design, sampling, and Field Experiment.</td>
                           <td>I. Bison</td>
@@ -420,12 +437,14 @@
                           <td>L12</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
+                          <td> ? </td>
                           <td>Slides, Video</td>
                           <td>Sample design, sampling, and Field Experiment; The timing (frequencies) of data collection.</td>
                           <td>I. Bison</td>
                         </tr>
                         <tr style="background-color: lightblue">
                           <th scope="row">29 Oct, 2020</th>
+                          <td> - </td>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
@@ -438,6 +457,7 @@
                           <td>L13</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
+                          <td>Link</td>
                           <td>Slides, Video</td>
                           <td>Groups: data collection architecture.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
@@ -447,12 +467,14 @@
                           <td>L14</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
+                          <td>Link</td>
                           <td>Slides, Video</td>
                           <td>Groups: data collection architecture.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
                         </tr>
                         <tr style="background-color: lightblue">
                           <th scope="row">9 Nov, 2020</th>
+                          <td> - </td>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
@@ -465,6 +487,7 @@
                           <td>L15</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
+                          <td> ? </td>
                           <td>Slides, Video</td>
                           <td>The recruitment; Field supervising; Ethical & GDPR aspects.</td>
                           <td>R. Bona</td>
@@ -474,6 +497,7 @@
                           <td>L16</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
+                          <td> - </td>
                           <td>Slides, Video</td>
                           <td>Data platforms for big data.</td>
                           <td>M. Zeni</td>
@@ -483,12 +507,14 @@
                           <td>L17</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
+                          <td> ? </td>
                           <td>Slides, Video</td>
                           <td>Data Cleaning and Methods for Data preparation.</td>
                           <td>I. Bison, M. Busso</td>
                         </tr>
                         <tr style="background-color: lightblue">
                           <th scope="row">16 Nov, 2020</th>
+                          <td> - </td>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
@@ -501,6 +527,7 @@
                           <td>L18</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
+                          <td> - </td>
                           <td>Slides, Video</td>
                           <td>Data cleaning and methods for data preparation.</td>
                           <td>M. Zeni</td>
@@ -510,6 +537,7 @@
                           <td>L19</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
+                          <td> ? </td>
                           <td>Slides, Video</td>
                           <td>Synchronic and Diachronic statistical models.</td>
                           <td>I. Bison</td>
@@ -519,6 +547,7 @@
                           <td>L20</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td>11:30</td>
+                          <td> - </td>
                           <td>Slides, Video</td>
                           <td>Sensor data analysis.</td>
                           <td>M. Zeni</td>
@@ -528,6 +557,7 @@
                           <td>L21</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
+                          <td> ? </td>
                           <td>Slides, Video</td>
                           <td>Find regularity, patterns, ...</td>
                           <td>I. Bison</td>
@@ -537,12 +567,14 @@
                           <td>L22</td>
                           <td style="text-align: center;"><span class="label label-warning">?</span></td>
                           <td>11:30</td>
+                          <td> ? </td>
                           <td>Slides, Video</td>
                           <td>Network models.</td>
                           <td>I. Bison</td>
                         </tr>
                         <tr style="background-color: grey">
                           <th scope="row">7 Dec, 2020</th>
+                          <td> - </td>
                           <td> - </td>
                           <td> - </td>
                           <td> - </td>
@@ -555,6 +587,7 @@
                           <td>L23</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
+                          <td>Link</td>
                           <td>Slides, Video</td>
                           <td>Final groups presentations</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
@@ -564,6 +597,7 @@
                           <td>L24</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
+                          <td>Link</td>
                           <td>Slides, Video</td>
                           <td>Final groups presentations</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
