Zoom link firstt lesson added

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                           <td>L1</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
-                          <td>Link</td>
+                          <td><a href="https://unitn.zoom.us/j/95686754582">Link</a></td>
                           <td><a target="_blank" href="https://drive.google.com/file/d/12f_QQuel7Y2eAJTVLPHIjimyLIrekbaS/view?usp=sharing">Slides</a>, Video</td>
                           <td>Course Introduction. Planning a project.</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
@@ -302,7 +302,7 @@
                           <th scope="row" rowspan="2">28 Sep, 2020</th>
                           <td rowspan="2">L3</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>     
-                          <td>11:30</td>  
+                          <td> - </td>  
                           <td> - </td>                
                           <td>Slides, Video</td>
                           <td>Why Human Behaviour? Why diversity? From a computer science perspective.</td>
@@ -356,7 +356,7 @@
                           <th scope="row">8 Oct, 2020</th>
                           <td>L6</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
-                          <td>11:30</td>
+                          <td> - </td>
                           <td> - </td>
                           <td>Slides, Video</td>
                           <td>Methods and tools for data collection. Passive data: smartphones or other devices.</td>
@@ -396,7 +396,7 @@
                           <th scope="row">19 Oct, 2020</th>
                           <td>L9</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
-                          <td>11:30</td>
+                          <td> - </td>
                           <td> - </td>
                           <td>Slides, Video</td>
                           <td>Capture synchronic / diachronic self-report data (Lime survey).</td>
@@ -406,7 +406,7 @@
                           <th scope="row">22 Oct, 2020</th>
                           <td>L10</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
-                          <td>11:30</td>
+                          <td> - </td>
                           <td> - </td>
                           <td>Slides, Video</td>
                           <td>Instruments for data collection. Capture in-the-time data (diachronic and streaming data).</td>
@@ -496,7 +496,7 @@
                           <th scope="row">12 Nov, 2020</th>
                           <td>L16</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
-                          <td>11:30</td>
+                          <td> - </td>
                           <td> - </td>
                           <td>Slides, Video</td>
                           <td>Data platforms for big data.</td>
@@ -526,7 +526,7 @@
                           <th scope="row">19 Nov, 2020</th>
                           <td>L18</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
-                          <td>11:30</td>
+                          <td> - </td>
                           <td> - </td>
                           <td>Slides, Video</td>
                           <td>Data cleaning and methods for data preparation.</td>
@@ -546,7 +546,7 @@
                           <th scope="row">26 Nov, 2020</th>
                           <td>L20</td>
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
-                          <td>11:30</td>
+                          <td> - </td>
                           <td> - </td>
                           <td>Slides, Video</td>
                           <td>Sensor data analysis.</td>
