--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>     
                           <td> - </td>  
                           <td> - </td>                
-                          <td>Video</td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1A1rwwM0QACeZQU-t70CcQzYSsF-FoyQF/view?usp=sharing">Video</a></td>
                           <td><a target="_blank" href="https://drive.google.com/file/d/1ACB6y6ZDitoLCph7Wnc8PLeyqiXrBqMN/view?usp=sharing">Slides</a></td>
                           <td>Why Human Behaviour? Why diversity? From a computer science perspective.</td>
                           <td>F. Giunchiglia</td>
