--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                           <td>F. Giunchiglia</td>
                         </tr>
                         <tr>
-                          <td><a target="_blank" href="https://drive.google.com/file/d/1OMLhk9siybd5SktjoxbIK6dn4gje06ex/view?usp=sharing">Slides</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1OMLhk9siybd5SktjoxbIK6dn4gje06ex/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1RfYxF6mnK4-sjKP0WIdmkiYPPeu2zccX?usp=sharing">Material</a></td>
                           <td>Course Introduction. Planning a project.</td>
                           <td>M. Busso</td>
                         </tr>
