Added link Zoom 28/09

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                         <tr>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>                         
                           <td>12:30</td>   
-                          <td>Link</td>                
+                          <td><a href="https://unitn.zoom.us/j/96993749145">Link</a> (930618)</td>            
                           <td>Video</td>
                           <td>Slides</td>
                           <td>Group formation, instructions and How to do a literature review.</td>
