Zoom link lesson 1 Oct added

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                           <td rowspan="2">L4</td>
                           <td rowspan="2" style="text-align: center;"><span class="label label-danger">Sync</span></td>     
                           <td rowspan="2">11:30</td> 
-                          <td rowspan="2">Link</td>                 
+                          <td rowspan="2"><a href="https://unitn.zoom.us/j/98389682990">Link</a> (491859)</td>            
                           <td rowspan="2">Video</td>
                           <td>Slides</td>
                           <td>Why Human Behaviour? Why diversity? From a sociological perspective.</td>
