--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                           <td>12:30</td>   
                           <td><a href="https://unitn.zoom.us/j/96993749145">Link</a> (930618)</td>            
                           <td>Video</td>
-                          <td>Slides</td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1O7UwQkVCjlZC-LQKnd_MqzN9RGUNtBTk/view?usp=sharing">Slides</a></td>
                           <td>Group formation, instructions and How to do a literature review.</td>
                           <td>M. Busso</td>
                         </tr>
