--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
                         <tr>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>                         
                           <td>12:30</td>   
-                          <td><a href="https://unitn.zoom.us/j/96993749145">Link</a> (930618)</td>            
-                          <td>Video</td>
+                          <td><a href="https://unitn.zoom.us/j/96993749145">Link</a> (930618)</td>    
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=632277">Video</a></td>        
                           <td><a target="_blank" href="https://drive.google.com/file/d/1O7UwQkVCjlZC-LQKnd_MqzN9RGUNtBTk/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1nNFnXWYSM2QITpBTpoYRQyKn8Jkjbd4P?usp=sharing">Material</a></td>
                           <td>Group formation, instructions and How to do a literature review.</td>
                           <td>M. Busso</td>
@@ -355,7 +355,7 @@
                           <td>I. Bison</td>
                         </tr>
                         <tr>             
-                          <td>Slides</td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1SyWzw7wotQeXiyOntWOPhqNELGy0rqPZ/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1T7R-Z9j2D1FUcBVh7PCKBHQaC4jloRz2?usp=sharing">Material</a></td>
                           <td>How to write a research project 1st Part.</td>
                           <td>M. Busso</td>
                         </tr>
@@ -371,7 +371,7 @@
                           <td>I. Bison</td>
                         </tr>
                         <tr>             
-                          <td>Slides</td>
+                          <td>Slides, <a target="_blank" href="https://drive.google.com/drive/folders/1TGzM3Ohr8a4DeyXuuTgq-vUcJeQUeFMx?usp=sharing">Material</a></td>
                           <td>How to prepare a questionnaire and how to write a research project 2nd Part.</td>
                           <td>M. Busso</td>
                         </tr>
