--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                           <td style="text-align: center;"><span class="label label-info">Async</span></td>
                           <td> - </td>
                           <td> - </td>
-                          <td><a target="_blank" href="">Video</a></td>
+                          <td><a target="_blank" href="https://didatticaonline.unitn.it/dol/mod/kalvidres/view.php?id=644633">Video</a></td>
                           <td><a target="_blank" href="https://drive.google.com/file/d/1Ck-rmU6huYRZNWtRXmRbvMOxKTCkL6y5/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/file/d/1MH5CWfw6BKebQhysOcd9Q1ebnjsW4hWA/view?usp=sharing">i-Log video</a></td>
                           <td>Methods and tools for data collection. Passive data: smartphones or other devices.</td>
                           <td>M. Zeni</td>
