--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                           <td>I. Bison</td>
                         </tr>
                         <tr>             
-                          <td>Slides, <a target="_blank" href="https://drive.google.com/drive/folders/1TGzM3Ohr8a4DeyXuuTgq-vUcJeQUeFMx?usp=sharing">Material</a></td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1W06cwy21yqsoZTCkarpkOhvc4vsQm-BE/view?usp=sharing">Slides</a>, <a target="_blank" href="https://drive.google.com/drive/folders/1TGzM3Ohr8a4DeyXuuTgq-vUcJeQUeFMx?usp=sharing">Material</a></td>
                           <td>How to prepare a questionnaire and how to write a research project 2nd Part.</td>
                           <td>M. Busso</td>
                         </tr>
