--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                           <td> - </td>
                           <td> - </td>
                           <td>Video</td>
-                          <td>Slides</td>
+                          <td><a target="_blank" href="https://drive.google.com/file/d/1odf7M84aRovUL01OzGNH0yy_tq7cd3iz/view?usp=sharing">Slides</a></td>
                           <td>Instruments for data collection. Capture in-the-time data (diachronic and streaming data).</td>
                           <td>M. Zeni</td>
                         </tr>
