Updated lesson L7 and added link to Zoom

--- a/index.html
+++ b/index.html
@@ -402,10 +402,10 @@
                           <td>L7</td>
                           <td style="text-align: center;"><span class="label label-danger">Sync</span></td>
                           <td>11:30</td>
-                          <td>Link</td>
+                          <td><a href="https://unitn.zoom.us/j/83480835572">Link</a> (176999)</td>
                           <td>Video</td>
                           <td>Slides</td>
-                          <td>Groups: project plan discussion.</td>
+                          <td>Students Q/A</td>
                           <td>I. Bison, F. Giunchiglia, M. Busso, M. Zeni</td>
                         </tr>
                         <tr style="background-color: lightpink">
